# sigmund-ai

./: .env.example  app.py  config.example.py  heymans.py  index_library.py  prompt_template.example.txt.txt  pyproject.toml  readme.md  update_subscription.py
.db.cache/: index.faiss  index.pkl
.github/workflows/: run-unittests.yaml
dev-docs/: conversation-structure.md
heymans/: __init__.py  attachments.py  chatmodes.py  config.py  documentation.py  forms.py  heymans.py  library.py  messages.py  model.py  prompt.py  server.py  tools.py  utils.py
heymans/database/: encryption.py  manager.py  models.py
heymans/model/: __init__.py  _anthropic_model.py  _base_model.py  _mistral_model.py  _openai_model.py
heymans/routes/: __init__.py  api.py  app.py  google_login.py  subscribe.py
heymans/static/: about.md  client.html  client.js  login.md  stylesheet.css  terms.md
heymans/templates/: about.html  already-subscribed.html  chat-area.html  chat.html  footer.html  head.html  header.html  library.html  login.html  login_failed.html  logout.html  main.js  menu.html  practice.html  practice.js  qa.html  qa.js  sign-out.html  start-info.html  stylesheet.css  stylesheet.css.jinja  subscribe-error.html  subscribe-now.html  subscribe-success.html
heymans/tools/: __init__.py  _base_tool.py  _download.py  _execute_code.py  _read_attachment.py  _search_documentation.py  _search_google_scholar.py  attachments_tool.py  base_tool.py  code_execution_tool.py  download_tool.py  google_scholar_tool.py  search_tool.py
migrations/: alembic.ini
migrations/versions/: 421388cbdc75_add_suspended_column_to_user.py  4c7819a06db8_index_relevant_keys_for_performance.py  bc5ca457b5f9_add_messages_table.py  f8a2c3d4e5b6_add_buffer_activity_table.py
sigmund/: __init__.py  attachments.py  config.py  documentation.py  library.py  limits.py  messages.py  process_sigmund_message.py  prompt.py  redis_client.py  reply.py  server.py  sigmund.py  static.py  utils.py
sigmund/database/: encryption.py  manager.py  models.py
sigmund/model/: __init__.py  _anthropic_model.py  _base_model.py  _dummy_model.py  _mistral_model.py  _openai_model.py  _z_model.py
sigmund/routes/: __init__.py  admin.py  api.py  app.py  google_login.py  public.py  store.py  subscribe.py
sigmund/static/: about.md  connectors.md  fair-use.md  login.md  menu.css  suspended.md  terms.md  user_question_guide.md  why-sigmund.md
sigmund/templates/: 404.html  admin.html  attachments.js  buy-extra-credits.html  chat.html  error.html  extra-credits-success.html  footer.html  global_elements.js  head.html  header.html  health.js  info-page.html  listener.js  login-div.html  login-failed.html  login.html  main.js  menu.html  search-widget.html  search-widget.js  sign-out.html  stylesheet.css  subscribe-now.html  (+6 more)
sources/: datamatrix.json  opensesame.json  pythontutorials.json
static/: client.html  client.js  stylesheet.css
tests/: alltestcases.md  test_api_chat.py  test_api_conversation.py  test_chatmodes.py  test_opensesame_qa.py  test_tools.py  test_tools_attachments.py  testcases.md
(+160 files in other folders)
