[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "sigmund"
authors = [
    {name = "Sebastiaan Mathôt", email = "s.mathot@cogsci.nl"}
]
readme = "readme.md"
license = {file = "COPYING"}
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "anthropic",
    "cryptography",
    "datamatrix",
    "faiss-cpu",
    "flask",
    "flask-login",
    "flask-sqlalchemy",
    "flask-wtf",
    "flask-cors",
    "jinja2",
    "jq",
    "langchain",
    "langchain_core",
    "langchain_community",
    "langchain_openai",
    "langchain_anthropic",
    "langchain_mistralai",
    "markdown",
    "oauthlib",
    "openai",
    "mistralai",
    "pdfminer.six",
    "pygments",
    "pyopenssl",
    "redis",
    "requests",
    "scholarly",
    "stripe",
    "tiktoken"
]
keywords = ["ai", "chatbot", "llm"]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
[project.urls]
Documentation = "https://sigmundai.eu"
Source = "https://github.com/smathot/sigmundai"
