[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"
[project]
name = "sigmund"
authors = [
    {name = "Sebastiaan Mathôt", email = "s.mathot@cogsci.nl"}
]
readme = "readme.md"
license = {file = "COPYING"}
requires-python = ">=3.8"
dynamic = ["version", "description"]
dependencies = [
    "anthropic",
    "beautifulsoup4",
    "cryptography",
    "chromadb",
    "datamatrix",
    "flask",
    "flask-login",
    "flask-sqlalchemy",
    "flask-wtf",
    "flask-cors",
    "flask-migrate",
    "flask-session",
    "jinja2",
    "jq",
    "markdown",
    "oauthlib",
    "openai",
    "mistralai",
    "pygments",
    "pyopenssl",
    "python-dotenv",
    "redis",
    "requests",
    "scholarly",
    "stripe",
    "tiktoken"
]
keywords = ["ai", "chatbot", "llm"]
[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
[project.urls]
Documentation = "https://sigmundai.eu"
Source = "https://github.com/open-cogsci/sigmund-ai"
